# AIVL

./: .env.example  .gitignore  README.md  claude-code-prompt.md  docker-compose.yml  render.yaml
ai-multi-agent/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml  worker.sh
ai-multi-agent/agents/: base.py  execution.py  parser.py  planner.py  report.py  self_healing.py  tasks.py  verification.py
ai-multi-agent/node/: __init__.py  _template.py  base.py  registry.py
ai-multi-agent/node/ai_agent/: __init__.py  ai_agent.py
ai-multi-agent/node/parser/: __init__.py  excel_reader.py
ai-multi-agent/orchestrator/: app.py  engine.py  events.py
ai-multi-agent/shared/: celery_app.py  clients.py  config.py  db.py  schemas.py
automation-server/: .env.example  Dockerfile  docker-compose.yml  main.py  pyproject.toml
contracts/: openapi.yaml
docs/: README.md  adding-a-tool.md  communication.md  database.md  deployment.md  flow.md  overview.md  security.md
web/: .env.example  .gitignore  package-lock.json  package.json  tsconfig.tsbuildinfo
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/api/agents/: route.ts
web/src/app/api/catalog/: route.ts
web/src/app/api/runs/: route.ts
web/src/app/api/runs/[id]/: route.ts
web/src/app/api/sessions/: route.ts
web/src/app/api/workflows/: route.ts
web/src/app/builder/: page.tsx
web/src/app/runs/[id]/: page.tsx
web/src/app/session/[id]/: page.tsx
web/src/app/workflow/[id]/: page.tsx
web/src/db/: index.ts  schema.ts  seed.ts
web/src/lib/: graph.ts  services.ts  types.ts
(+5 files in other folders)
