[project]
name = "ai-multi-agent"
version = "0.1.0"
description = "Orchestrator (coordinator agent) + unit tasks (ai_agent, excel_reader) on Celery/Redis"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "celery>=5.3",
    "redis>=5.0",
    "httpx>=0.27",
    "pydantic>=2.6",
    "openpyxl>=3.1",
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.2",
]

[tool.uv]
package = false
